# mlopstraining

./: .gitignore  README.md  monitor_ci.sh
.github/workflows/: tasks10-ci.yml  tasks10-security.yml  tasks9-ci.yml
Tasks1/: Task1.md
Tasks10/: Dockerfile  Makefile  README.md  check-deployment.sh  env-example  fix-prometheus-config.yaml  high_load_test.sh  requirements.txt  test-monitoring-full.sh
Tasks10/.github/: README.md
Tasks10/.github/workflows/: ci-cd.yml  security.yml
Tasks10/argocd/: ArgoCD.md  README.md  application.yaml  project.yaml
Tasks10/argocd/airflow/: airflow-helm.yaml  requirements.txt
Tasks10/argocd/manifests/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml  servicemonitor.yaml
Tasks10/dag/: kafka-attack-producer.py  spark_stream_inference_http.py  spark_stream_inference_http_parallel.py
Tasks10/doc/: product_idea.md  tasklist.md  vision.md
Tasks10/monitoring/: README.md  TROUBLESHOOTING.md  test-trafic.bash
Tasks10/monitoring/alerts/: grafana-telegram-setup-guide.md  ml-alerts.yaml
Tasks10/monitoring/dashboards/: ml-model-dashboard.json
Tasks10/src/: __init__.py  api.py  api_old.py  config.py  metrics.py
Tasks10/tests/: test_basic.py
Tasks2/: README.md
Tasks2/otus-practice-cloud-infra/: README.md
Tasks2/otus-practice-cloud-infra/infra/: main.tf  provider.tf
Tasks3/: README.md
Tasks3/minio-kuber-spark/: README.md  clear-dataset.ipynb  minio-test.ipynb
Tasks4/: README.md  feast-data.ipynb
Tasks4/fraud_features/: example_repo2.py
Tasks4/fraud_features/feature_repo/: example_repo.py  feature_store.yaml
Tasks5/: README.md
Tasks5/my-practice-airflow-yandex-cloud/: Makefile  README.md
Tasks5/my-practice-airflow-yandex-cloud/dags/: README.md  data_pipeline.py
Tasks5/my-practice-airflow-yandex-cloud/infra/: README.md  main.tf  outputs.tf  provider.tf
Tasks5/my-practice-airflow-yandex-cloud/src/: pyspark_script.py
Tasks6/: README.md
Tasks6/my-practice/dags/: README.md  (+2 more)
Tasks7/: README.md
Tasks7/my-validation/: README.md
Tasks8/my-kafka/: README.md
Tasks9/: .flake8  .gitignore  CICD.md  DOCKER.md  Dockerfile  Dockerfile.fallback  MEMORY_LOADING_NOTES.md  Makefile  README.md  docker-compose.fallback.yml  docker-compose.yml  docker-test.sh  env  env-example  pyproject.toml  pytest.ini  requirements.txt  test-fallback.sh  test_api_manual.py  test_model_final.py  test_simple_api.py
Tasks9/.cursor/rules/: conventions.mdc  workflow.mdc
Tasks9/.github/workflows/: ci-cd.yml  security.yml
Tasks9/argocd/: README.md  application.yaml  cleanup-k8s.sh  project.yaml  test-k8s-deployment.sh
Tasks9/argocd/manifests/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
Tasks9/doc/: product_idea.md  tasklist.md  vision.md
Tasks9/manifests/: application.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml
Tasks9/src/: __init__.py  api.py  api_fallback.py  api_improved.py  api_simple.py  config.py  model_loader.py
Tasks9/tests/: __init__.py  test_api_improved.py  test_api_simple.py  test_config.py
(+55 files in other folders)
